# financial-time-series-forecasting-with-deep-learning-a-syste

./: CLAUDE.md  README.md  main.py  pyproject.toml
docs/: open_questions.md
reports/cycle_2/: metrics.json  preflight.md  technical_findings.md
src/: data_loader.py  features.py
tests/: test_data_integrity.py
