[project]
name = "financial-time-series-forecasting-with-deep-learning-a-syste"
version = "0.1.0"
description = "Financial Time Series Forecasting with Deep Learning : A Systematic Literature Review"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "scikit-learn", "torch", "matplotlib", "tqdm"]
